--- a/Field_mapping_automation.ipynb
+++ b/Field_mapping_automation.ipynb
@@ -347,316 +347,123 @@
     "inventory_remove_source_name = data[\"inventory_remove_source_name\"]\n",
     "inventory_source_of_truth_explode = data[\"inventory_source_of_truth_explode\"]\n",
     "\n",
-    "if inventory_source_of_truth_explode==\"True\":\n",
-    "    print(\"starting\")\n",
-    "    columns_to_be_added = source_of_truth_explode(df_2)\n",
+    "# if inventory_source_of_truth_explode==\"True\":\n",
+    "#     print(\"starting\")\n",
+    "#     columns_to_be_added = source_of_truth_explode(df_2)\n",
     "\n",
-    "# df_1_name = secondary_path.split(\"\\\\\")[-1]\n",
-    "# df_2_name = primary_path.split(\"\\\\\")[-1]\n",
+    "df_1_name = secondary_path.split(\"\\\\\")[-1]\n",
+    "df_2_name = primary_path.split(\"\\\\\")[-1]\n",
     "\n",
-    "# df_1.loc[:, 'unique_record_identifier'] = [str(i) for i in range(len(df_1))]\n",
-    "# df_2.loc[:, 'unique_record_identifier'] = [str(i) for i in range(len(df_2))]\n",
+    "df_1.loc[:, 'unique_record_identifier'] = [str(i) for i in range(len(df_1))]\n",
+    "df_2.loc[:, 'unique_record_identifier'] = [str(i) for i in range(len(df_2))]\n",
     "\n",
-    "# df_1_original = df_1.copy()\n",
-    "# df_2_original = df_2.copy()\n",
+    "df_1_original = df_1.copy()\n",
+    "df_2_original = df_2.copy()\n",
     "\n",
-    "# if len(inventory_remove_source_name) > 2:\n",
-    "#     df_2 = df[df_2['source_of_truth'] != inventory_remove_source_name]\n",
+    "if len(inventory_remove_source_name) > 2:\n",
+    "    df_2 = df[df_2['source_of_truth'] != inventory_remove_source_name]\n",
     "\n",
-    "# def arr_length_greater_than_zero(arr):\n",
-    "#     if len(arr[1:-1].split(\",\")) > 0:\n",
-    "#         return True\n",
-    "#     else:\n",
-    "#         return False\n",
+    "def arr_length_greater_than_zero(arr):\n",
+    "    if len(arr[1:-1].split(\",\")) > 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "    \n",
-    "# if (arr_length_greater_than_zero(col_to_keep_df_1)):\n",
-    "#     col_to_keep_df_1 = col_to_keep_df_1[:-1]+',unique_record_identifier'+']'\n",
-    "#     df_1 = columns_to_keep(df_1, col_to_keep_df_1)\n",
+    "if (arr_length_greater_than_zero(col_to_keep_df_1)):\n",
+    "    col_to_keep_df_1 = col_to_keep_df_1[:-1]+',unique_record_identifier'+']'\n",
+    "    df_1 = columns_to_keep(df_1, col_to_keep_df_1)\n",
     "    \n",
-    "# if (arr_length_greater_than_zero(col_to_keep_df_2)):\n",
-    "#     col_to_keep_df_2 = col_to_keep_df_2[:-1]+',unique_record_identifier'+']'\n",
-    "#     df_2 = columns_to_keep(df_2, col_to_keep_df_2)\n",
+    "if (arr_length_greater_than_zero(col_to_keep_df_2)):\n",
+    "    col_to_keep_df_2 = col_to_keep_df_2[:-1]+',unique_record_identifier'+']'\n",
+    "    df_2 = columns_to_keep(df_2, col_to_keep_df_2)\n",
     "    \n",
-    "# if (arr_length_greater_than_zero(col_to_be_deleted_df_1)):\n",
-    "#     col_to_be_deleted = col_to_be_deleted_df_1[1:-1].split(\",\")\n",
-    "#     col_to_be_deleted = [x.strip() for x in col_to_be_deleted]\n",
-    "#     df_1 = field_remove(df_1, col_to_be_deleted)\n",
+    "if (arr_length_greater_than_zero(col_to_be_deleted_df_1)):\n",
+    "    col_to_be_deleted = col_to_be_deleted_df_1[1:-1].split(\",\")\n",
+    "    col_to_be_deleted = [x.strip() for x in col_to_be_deleted]\n",
+    "    df_1 = field_remove(df_1, col_to_be_deleted)\n",
     "\n",
-    "# if (arr_length_greater_than_zero(col_to_be_deleted_df_2)):\n",
-    "#     col_to_be_deleted = col_to_be_deleted_df_2[1:-1].split(\",\")\n",
-    "#     col_to_be_deleted = [x.strip() for x in col_to_be_deleted]\n",
-    "#     df_2 = field_remove(df_2, col_to_be_deleted)\n",
+    "if (arr_length_greater_than_zero(col_to_be_deleted_df_2)):\n",
+    "    col_to_be_deleted = col_to_be_deleted_df_2[1:-1].split(\",\")\n",
+    "    col_to_be_deleted = [x.strip() for x in col_to_be_deleted]\n",
+    "    df_2 = field_remove(df_2, col_to_be_deleted)\n",
     "    \n",
-    "# if len(ast.literal_eval(secondary_duplicate_update)) > 0:\n",
-    "#     secondary_duplicate_update = ast.literal_eval(secondary_duplicate_update)\n",
-    "#     for duplicate_update in list(secondary_duplicate_update.keys()):\n",
-    "#         df_1[secondary_duplicate_update[duplicate_update]].fillna('1840-09-23T12:28:49.664010Z')\n",
-    "#         df_1 = df_1.sort_values(secondary_duplicate_update[duplicate_update]).groupby(duplicate_update).tail(1)\n",
+    "if len(ast.literal_eval(secondary_duplicate_update)) > 0:\n",
+    "    secondary_duplicate_update = ast.literal_eval(secondary_duplicate_update)\n",
+    "    for duplicate_update in list(secondary_duplicate_update.keys()):\n",
+    "        df_1[secondary_duplicate_update[duplicate_update]].fillna('1840-09-23T12:28:49.664010Z')\n",
+    "        df_1 = df_1.sort_values(secondary_duplicate_update[duplicate_update]).groupby(duplicate_update).tail(1)\n",
     "          \n",
-    "# if len(ast.literal_eval(primary_duplicate_update)) > 0:\n",
-    "#     primary_duplicate_update = ast.literal_eval(primary_duplicate_update)\n",
-    "#     for duplicate_update in list(primary_duplicate_update.keys()):\n",
-    "#         df_2[primary_duplicate_update[duplicate_update]].fillna('1840-09-23T12:28:49.664010Z')\n",
-    "#         df_2 = df_2.sort_values(primary_duplicate_update[duplicate_update]).groupby(duplicate_update).tail(1)\n",
+    "if len(ast.literal_eval(primary_duplicate_update)) > 0:\n",
+    "    primary_duplicate_update = ast.literal_eval(primary_duplicate_update)\n",
+    "    for duplicate_update in list(primary_duplicate_update.keys()):\n",
+    "        df_2[primary_duplicate_update[duplicate_update]].fillna('1840-09-23T12:28:49.664010Z')\n",
+    "        df_2 = df_2.sort_values(primary_duplicate_update[duplicate_update]).groupby(duplicate_update).tail(1)\n",
     "\n",
-    "# # df_2 = df_2.sort_values('last_logon').groupby('employee_id').tail(1)\n",
+    "# df_2 = df_2.sort_values('last_logon').groupby('employee_id').tail(1)\n",
     "\n",
-    "# print(\"Message: Cleaning Started\")\n",
-    "# df_1, i = clean_up(df_1)\n",
-    "# df_2, i = clean_up(df_2, i)\n",
-    "# print(\"Message: Cleaning Completed\\n\")\n",
+    "print(\"Message: Cleaning Started\")\n",
+    "df_1, i = clean_up(df_1)\n",
+    "df_2, i = clean_up(df_2, i)\n",
+    "print(\"Message: Cleaning Completed\\n\")\n",
     "\n",
-    "# if matrix == 'True':\n",
-    "#     mapping_matrix(df_1,df_2)\n",
-    "#     print(\"Message: Mapping Matrix Completed\\n\")\n",
+    "if matrix == 'True':\n",
+    "    mapping_matrix(df_1,df_2)\n",
+    "    print(\"Message: Mapping Matrix Completed\\n\")\n",
     "    \n",
-    "# if random == 'True':\n",
-    "#     print(colored(\"\\n\" + \"*\"*56 + \"RANDOM MAPPING\" + \"*\"*56, 'green', attrs=['bold']))\n",
-    "#     final_arr=[]\n",
-    "#     coverage, df_1_not_mapped, df_2_not_mapped, final_arr, df_1_mapped_unique_indentifier, df_2_mapped_unique_indentifier = random_mapping(df_1, df_2, 0, final_arr)\n",
-    "#     random_secondary_not_mapped = df_1_original[df_1_original['unique_record_identifier'].isin(df_1_not_mapped['unique_record_identifier'])]\n",
-    "#     random_primary_not_mapped = df_2_original[df_2_original['unique_record_identifier'].isin(df_2_not_mapped['unique_record_identifier'])]\n",
-    "#     t1 = time.time()\n",
-    "#     time_taken = round((t1-t0)/60,2)\n",
-    "#     mapping(final_arr, df_1_name, df_2_name)\n",
-    "#     total_duplicate_records = duplicate_field_details('random', final_arr)\n",
-    "#     mapping_summary(df_1_name, df_1, coverage, len(total_duplicate_records))\n",
-    "#     duplicate_records_summary('random')\n",
+    "if random == 'True':\n",
+    "    print(colored(\"\\n\" + \"*\"*56 + \"RANDOM MAPPING\" + \"*\"*56, 'green', attrs=['bold']))\n",
+    "    final_arr=[]\n",
+    "    coverage, df_1_not_mapped, df_2_not_mapped, final_arr, df_1_mapped_unique_indentifier, df_2_mapped_unique_indentifier = random_mapping(df_1, df_2, 0, final_arr)\n",
+    "    random_secondary_not_mapped = df_1_original[df_1_original['unique_record_identifier'].isin(df_1_not_mapped['unique_record_identifier'])]\n",
+    "    random_primary_not_mapped = df_2_original[df_2_original['unique_record_identifier'].isin(df_2_not_mapped['unique_record_identifier'])]\n",
+    "    t1 = time.time()\n",
+    "    time_taken = round((t1-t0)/60,2)\n",
+    "    mapping(final_arr, df_1_name, df_2_name)\n",
+    "    total_duplicate_records = duplicate_field_details('random', final_arr)\n",
+    "    mapping_summary(df_1_name, df_1, coverage, len(total_duplicate_records))\n",
+    "    duplicate_records_summary('random')\n",
     "    \n",
-    "# priority_temp = priority[1:-1].split()\n",
-    "# if ((len(priority_temp ) > 0)):\n",
-    "#     print(colored(\"\\n\" + \"*\"*55 + \"PRIORITY MAPPING\" + \"*\"*55, 'red', attrs=['bold']))\n",
-    "#     priority = priority[1:-1].split(\",\")\n",
-    "#     priority = list(map(lambda x: x.lower(), priority))\n",
-    "#     df_1_not_mapped = df_1.copy()\n",
-    "#     df_2_not_mapped = df_2.copy()\n",
-    "#     coverage=0\n",
-    "#     final_arr=[]\n",
-    "#     df_1_mapped_unique_indentifier = []\n",
-    "#     df_2_mapped_unique_indentifier = []\n",
-    "#     for priority_item in priority:\n",
-    "#         priority_item = priority_item.strip()\n",
-    "#         priority_item = priority_item+\",\"+'unique_record_identifier'\n",
-    "#         priority_item_modified = \"[\" + priority_item + \"]\"\n",
-    "#         df_1_priority = columns_to_keep(df_1_not_mapped, priority_item_modified)\n",
-    "#         coverage, df_1_not_mapped, df_2_not_mapped, final_arr, df_1_mapped_unique_indentifier_priority, df_2_mapped_unique_indentifier_priority = random_mapping(df_1_priority, df_2_not_mapped, coverage, final_arr)\n",
-    "#         df_1_not_mapped = df_1[df_1['unique_record_identifier'].isin(df_1_not_mapped['unique_record_identifier'])]\n",
+    "priority_temp = priority[1:-1].split()\n",
+    "if ((len(priority_temp ) > 0)):\n",
+    "    print(colored(\"\\n\" + \"*\"*55 + \"PRIORITY MAPPING\" + \"*\"*55, 'red', attrs=['bold']))\n",
+    "    priority = priority[1:-1].split(\",\")\n",
+    "    priority = list(map(lambda x: x.lower(), priority))\n",
+    "    df_1_not_mapped = df_1.copy()\n",
+    "    df_2_not_mapped = df_2.copy()\n",
+    "    coverage=0\n",
+    "    final_arr=[]\n",
+    "    df_1_mapped_unique_indentifier = []\n",
+    "    df_2_mapped_unique_indentifier = []\n",
+    "    for priority_item in priority:\n",
+    "        priority_item = priority_item.strip()\n",
+    "        priority_item = priority_item+\",\"+'unique_record_identifier'\n",
+    "        priority_item_modified = \"[\" + priority_item + \"]\"\n",
+    "        df_1_priority = columns_to_keep(df_1_not_mapped, priority_item_modified)\n",
+    "        coverage, df_1_not_mapped, df_2_not_mapped, final_arr, df_1_mapped_unique_indentifier_priority, df_2_mapped_unique_indentifier_priority = random_mapping(df_1_priority, df_2_not_mapped, coverage, final_arr)\n",
+    "        df_1_not_mapped = df_1[df_1['unique_record_identifier'].isin(df_1_not_mapped['unique_record_identifier'])]\n",
     "      \n",
-    "#         if len(df_1_mapped_unique_indentifier_priority) > 0:\n",
-    "#             df_1_mapped_unique_indentifier.extend(df_1_mapped_unique_indentifier_priority)\n",
-    "#         if len(df_2_mapped_unique_indentifier_priority) > 0:\n",
-    "#             df_2_mapped_unique_indentifier.extend(df_2_mapped_unique_indentifier_priority)\n",
-    "#     if priority_random == 'True':\n",
-    "#         coverage, df_1_not_mapped, df_2_not_mapped, final_arr, df_1_mapped_unique_indentifier_priority, df_2_mapped_unique_indentifier_priority = random_mapping(df_1_not_mapped, df_2_not_mapped, coverage, final_arr)\n",
-    "#         df_1_mapped_unique_indentifier.extend(df_1_mapped_unique_indentifier_priority)\n",
-    "#         df_2_mapped_unique_indentifier.extend(df_2_mapped_unique_indentifier_priority)\n",
+    "        if len(df_1_mapped_unique_indentifier_priority) > 0:\n",
+    "            df_1_mapped_unique_indentifier.extend(df_1_mapped_unique_indentifier_priority)\n",
+    "        if len(df_2_mapped_unique_indentifier_priority) > 0:\n",
+    "            df_2_mapped_unique_indentifier.extend(df_2_mapped_unique_indentifier_priority)\n",
+    "    if priority_random == 'True':\n",
+    "        coverage, df_1_not_mapped, df_2_not_mapped, final_arr, df_1_mapped_unique_indentifier_priority, df_2_mapped_unique_indentifier_priority = random_mapping(df_1_not_mapped, df_2_not_mapped, coverage, final_arr)\n",
+    "        df_1_mapped_unique_indentifier.extend(df_1_mapped_unique_indentifier_priority)\n",
+    "        df_2_mapped_unique_indentifier.extend(df_2_mapped_unique_indentifier_priority)\n",
     "    \n",
-    "#     priority_secondary_not_mapped = df_1_original[df_1_original['unique_record_identifier'].isin(df_1_not_mapped['unique_record_identifier'])]\n",
-    "#     priority_primary_not_mapped = df_2_original[df_2_original['unique_record_identifier'].isin(df_2_not_mapped['unique_record_identifier'])]\n",
-    "#     mapping(final_arr, df_1_name, df_2_name)\n",
-    "#     total_duplicate_records = duplicate_field_details('priority', final_arr)\n",
-    "#     mapping_summary(df_1_name, df_1, coverage, len(total_duplicate_records))\n",
-    "#     duplicate_records_summary('priority')\n",
+    "    priority_secondary_not_mapped = df_1_original[df_1_original['unique_record_identifier'].isin(df_1_not_mapped['unique_record_identifier'])]\n",
+    "    priority_primary_not_mapped = df_2_original[df_2_original['unique_record_identifier'].isin(df_2_not_mapped['unique_record_identifier'])]\n",
+    "    mapping(final_arr, df_1_name, df_2_name)\n",
+    "    total_duplicate_records = duplicate_field_details('priority', final_arr)\n",
+    "    mapping_summary(df_1_name, df_1, coverage, len(total_duplicate_records))\n",
+    "    duplicate_records_summary('priority')\n",
     "    \n",
-    "# print(colored(\"\\nVariable Name Details:\", attrs=['bold']))\n",
-    "# print(\"Mapped Details of Primary/Secondary Source: (random/priority)_(primary/secondary)_mapped\")\n",
-    "# print(\"Unmapped Deatails of Primary/Secodnary Source: (random/priority)_(primary/secondary)_not_mapped\")\n",
-    "# print(\"Individual Mapping Details: (random/priority)_(primary/secondary)_mapped_(mapping_field_name)\")\n",
-    "# print(\"Duplicate mapping details: (random/priority)_(primary/secondary)_mapped_(mapping_field_name)_duplicate\")"
+    "print(colored(\"\\nVariable Name Details:\", attrs=['bold']))\n",
+    "print(\"Mapped Details of Primary/Secondary Source: (random/priority)_(primary/secondary)_mapped\")\n",
+    "print(\"Unmapped Deatails of Primary/Secodnary Source: (random/priority)_(primary/secondary)_not_mapped\")\n",
+    "print(\"Individual Mapping Details: (random/priority)_(primary/secondary)_mapped_(mapping_field_name)\")\n",
+    "print(\"Duplicate mapping details: (random/priority)_(primary/secondary)_mapped_(mapping_field_name)_duplicate\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b0aa41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4330f460",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(columns_to_be_added)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee0528b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=[('SF', 'nevin'), ('AD', 'TOMS')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8865ebb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip(*[('a', 1), ('b', 2), ('c', 3), ('d', 4)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dffd9aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_2 = pd.read_parquet(r\"C:\\Users\\Public\\Downloads\\SummaryDM\\12Oct2022\\INV\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4e606ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns_to_be_added = []\n",
-    "for col in df_2.columns:\n",
-    "    if ((\"source_of_truth\" in col) & (len(col) > 14)):\n",
-    "        print(col)\n",
-    "        for x in df_2[col]:\n",
-    "            if x is not None:\n",
-    "                print(x)\n",
-    "                columns_to_be_added.extend(list(list(zip(*x))[0]))\n",
-    "#         df_2[col].apply(lambda x: columns_to_be_added.extend(list(list(zip(*x))[0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad377657",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set(columns_to_be_added)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32f8ee14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_2['object_name_with_source_of_truth']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62ba8664",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38be7b31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for x in zip(*a):\n",
-    "    print(x[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef80ab7c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "tu = set(list(zip(*a))[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7fbba2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tu.add(\"AD\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4996d18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac776a4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tuple(tu)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f159018a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "priority_primary_mapped_employee_id_duplicate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "136aaca7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "priority_secondary_mapped[priority_secondary_mapped['employee_id']=='14200']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dfcfba3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "priority_primary_mapped[priority_primary_mapped['employee_id']=='14200'][['object_name', 'last_logon']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8a9a830",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fed56746",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
